<resources>
    <string name="app_name">Peluchitosv2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Agregar_nuevo">Agregar peluche</string>
    <string name="Nombre">Nombre</string>
    <string name="Código">Código</string>
    <string name="Cantidad">Cantidad</string>
    <string name="Precio">Precio</string>
    <string name="Guardar">Guardar</string>
    <string name="Buscar_peluches">Buscar peluches</string>
    <string name="Ingresar_nombre">Ingrese nombre</string>
    <string name="Buscar">Buscar</string>
    <string name="Información_detallada">INFORMACIÓN DETALLADA:</string>
    <string name="Eliminar_peluches">Eliminar peluches</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Inventario">Inventario</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="tab_agregar">Agregar</string>
    <string name="tab_buscar">Buscar</string>
    <string name="tab_eliminar">Eliminar</string>
    <string name="tab_ver">Inventario</string>
</resources>
