<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuscarFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Buscar_peluches"
        android:padding="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ingresar_nombre"
        android:padding="15dp"
        android:id="@+id/eBuscar"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Buscar"
        android:padding="15dp"
        android:id="@+id/bBuscar"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Información_detallada"
        android:padding="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:padding="15dp"
        android:id="@+id/tNombre"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Código"
        android:padding="15dp"
        android:id="@+id/tCódigo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cantidad"
        android:padding="15dp"
        android:id="@+id/tCantidad"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Precio"
        android:padding="15dp"
        android:id="@+id/tPrecio" />
</LinearLayout>