<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Agregar_nuevo"
        android:padding="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:padding="15dp"
        android:id="@+id/eNombre"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Código"
        android:padding="15dp"
        android:id="@+id/eCódigo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cantidad"
        android:padding="15dp"
        android:id="@+id/eCantidad"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Precio"
        android:padding="15dp"
        android:id="@+id/ePrecio"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Guardar"
        android:padding="15dp"
        android:id="@+id/bGuardar"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>